# brainbot

./: README.md  pyproject.toml
brainbot_command_service/: __init__.py  gr00t_modality.py  mode_manager.py  providers.py  run_command_service.py  service.py
brainbot_command_service/providers/: __init__.py  ai.py  base.py  data.py  teleop.py
brainbot_control_service/: __init__.py  base.py  camera_streamer.py  command_client.py  command_loop.py  run_robot_service.py  service.py
brainbot_core/: __init__.py  config.py  transport.py
brainbot_core/proto/: __init__.py  messages.py
brainbot_mode_dispatcher/: __init__.py  cli.py  commands.py  events.py  keyboard.py  socket.py
brainbot_pc_manager/: __init__.py  client.py  service.py
brainbot_service_manager/: __init__.py  client.py  service.py
brainbot_teleop_server/: __init__.py  server.py
brainbot_webviz/: __init__.py  server.py
scripts/: __init__.py  kill_brainbot.sh  launch_brainbot.sh  launch_brainbot_terminator.sh  launch_new.sh  pc_command.yaml  prune_incomplete_episodes.py  remote_mode_command.sh  run_operator_command.py  run_thor_robot.py  thor_robot.yaml
scripts/hub/: data_server.yaml  gamepad.yaml  hub_manager.yaml  joycon.yaml  leader_teleop.yaml  run_all.py  run_teleop_server.py  teleop_server.yaml
scripts/pc/: ar_teleop.yaml  data_server.yaml  gamepad.yaml  joycon.yaml  leader_teleop.yaml  pc_manager.yaml  run_all.py  run_data_server.py  run_teleop_server.py  teleop_server.yaml
scripts/remote/: run_all.py  thor_command.yaml  thor_data.yaml  thor_robot.yaml  wait_for_socket.sh
(+12 files in other folders)
